[package]
name = "meet-a-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.3", features = ["macros"] }
reqwest = { version = "0.11.23", features = ["json"] } 
tracing = "0.1.40"
console-subscriber = "0.2.0"
tracing-subscriber = "0.3.18"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "macros"] }
thiserror = "1.0.57"

[dev-dependencies]
rstest = "0.18.2"
