[package]
name = "meet-a-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.3", features = ["macros"] }
teams_api = { path = "../teams-api" }
reqwest = { version = "0.11.23", features = ["native-tls-vendored"] }
tracing = "0.1.40"
console-subscriber = "0.2.0"
tracing-subscriber = "0.3.18"
